// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text-node-update-compiler on compile multiple paths 1`] = `
"_reactivePaths['bar'] = _reactivePaths['bar'] || [];
_reactivePaths['bar'].push({
  update: state => {
    testElement.nodeValue = 'test-template-string';
  }
});
_reactivePaths['foo'] = _reactivePaths['foo'] || [];
_reactivePaths['foo'].push({
  update: state => {
    testElement.nodeValue = 'test-template-string';
  }
});"
`;

exports[`text-node-update-compiler on compile single path 1`] = `
"_reactivePaths['bar'] = _reactivePaths['bar'] || [];
_reactivePaths['bar'].push({
  update: state => {
    testElement.nodeValue = 'test-template-string';
  }
});"
`;
